k8s-iac-production/v3/networking.k8s.io.Ingress.creatives.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: '*'
    nginx.ingress.kubernetes.io/cors-allow-methods: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
  name: creatives
  namespace: v3
spec:
  ingressClassName: ingress-nginx-public
  rules:
  - host: creatives.afilio.com.br
    http:
      paths:
      - backend:
          service:
            name: creatives-service
            port:
              number: 80
        path: /api/upload
        pathType: Prefix
      - backend:
          service:
            name: creatives-service
            port:
              number: 80
        path: /api/update
        pathType: Prefix
      - backend:
          service:
            name: creatives-service
            port:
              number: 80
        path: /api/upload_edit
        pathType: Prefix
  tls:
  - hosts:
    - creatives.afilio.com.br
    secretName: wildcard-v2
